Fix gap between sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,18 @@ a {
     color: var(--gray-color);
     line-height: 2.5rem;
 }
+.skills__img-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+}
+.skills__img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 /* Works section */
 .work-box{
     background-color: var(--light-gray-color);
@@ -311,11 +323,23 @@ a {
         gap: 1rem;
         margin-top: 4rem;
     }
+    .home__image-box{
+        margin-top: 5rem;
+    }
     .home__image{
         width: 80%;
+
+    }
+    .about__content{
+        flex-direction: column;
+        align-items: center;
+    }
+    .about__img{
+        border-radius: 50%;
     }
     .skills__content{
         flex-direction: column;
+        gap: 3rem;
     }
     .works__content{
         grid-template-columns: 100%;
@@ -326,6 +350,15 @@ a {
     }
     .contact__content{
         flex-direction: column;
+        gap: 3rem;
+    }
+    .contact__form .inline-inputs{
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+    .input{
+        width: 100%;
     }
 
 }
